--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Bounce</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 <body>
+    <div>
+        <h1 id="title">Bounce</h1>
+        <p id="description">
+            If you want to relax and free your mind for a couple of minutes just stay here and watch the balls bounce away.
+        </p>
+        <div id="ballCountDiv">
+            <label id="ballCountLabel">How many balls? </label>
+            <input type="number" id="ballCountInput">
+        </div>
+        <button id="startButton">Bounce</button>
+        
+    </div>
+
+    <div id="bounceDiv" ></div>
     
 </body>
-</html>>
+<script src='main.js'></script>
+</html>
