--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <title>Bounce</title>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="icon" href="./Media/icon.png">
 </head>
 <body>
     <div>
@@ -21,6 +22,6 @@
 
     <div id="bounceDiv" ></div>
 
-    <script src='main.js'></script>
+    <script type='module' src='main.js'></script>
 </body>
 </html>
